--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <article class="review">
                 <div class="img-container">
-                    <img src="" alt="person" id="person-img">
+                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="person" id="person-img">
                 </div>
                 <h4 id="author">Teszt Elek</h4>
                 <p id="job">Javascript fejlesztő</p>
